--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>Kards</title>
+  <title>shaoDong</title>
   <meta name="description" content="">  
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -17,6 +17,7 @@
   <script src="js/modernizr.js"></script>
   <script src="js/pace.min.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/iconfont.js"></script>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
@@ -83,27 +84,27 @@
         <ul class="skill-bars">
            <li>
             <div class="progress percent90"><span>90%</span></div>
-            <strong>HTML5</strong>
+            <strong>HTML5, CSS, JavaScript</strong>
            </li>
            <li>
             <div class="progress percent80"><span>80%</span></div>
-            <strong>CSS3</strong>
+            <strong>JQuery, Angular, Vue</strong>
            </li>
            <li>
             <div class="progress percent85"><span>85%</span></div>
-            <strong>JavaScript</strong>
+            <strong>Bootstrap, ElementUI</strong>
            </li>
            <li>
-            <div class="progress percent80"><span>80%</span></div>
-            <strong>JQuery</strong>
-           </li>
-           <li>
-            <div class="progress percent75"><span>75%</span></div>
-            <strong>NodeJs</strong>
+            <div class="progress percent85"><span>85%</span></div>
+            <strong>Sass, Stylus</strong>
            </li>
            <li>
             <div class="progress percent75"><span>75%</span></div>
-            <strong>Python</strong>
+            <strong>NodeJs, Python</strong>
+           </li>
+           <li>
+            <div class="progress percent90"><span>90%</span></div>
+            <strong>Markdown, Github</strong>
            </li>
         </ul>  
       </div>
@@ -133,7 +134,7 @@
             </div>
             <div class="timeline-content">
               <h4>Huikao Education</h4>
-              <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+              <p>I came to know more things about web development there and participated in the development of multiple projects, including mobile development and pc-side development. It is a very cohesive team, and everyone is full of passion. I enjoy working there!</p>
             </div>
           </div>
           <div class="timeline-block">
@@ -146,7 +147,7 @@
             </div>
             <div class="timeline-content">
               <h4>Cellcom Technology Co., LTD.</h4>
-              <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+              <p>My job here is doing front-end development. I participated in a project of leave system in SCUT(South China University of Technology) based on wechat public number. And the technical selection of this project is Angular.js+Bootstrap+Jade.</p>
             </div>
           </div> 
           <div class="timeline-block">
@@ -160,7 +161,7 @@
 
             <div class="timeline-content">
               <h4>IFLYTEK CO.,LTD.</h4>
-              <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+              <p>I worked as a test engineer there. And my daily work is to produce and check secondary education resources. Occasionally, I will test the Examination System to find bugs.</p>
             </div>
           </div>
           <div class="timeline-block">
@@ -173,7 +174,7 @@
             </div>
             <div class="timeline-content">
               <h4>China Ping An Feidong Branch</h4>
-              <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+              <p>I was cheated to the insurance company on the pretext of a monthly salary of more than 2,000. Fortunately, besides helping others with their qualification exam, I also learned many knowledge of insurance.</p>
             </div>
           </div>
         </div>      
@@ -208,7 +209,7 @@
             </div>
             <div class="timeline-content">
               <h4>Anhui University</h4>
-              <p>I don't know why I came to AnHui University, but I spent four years there to complete courses during university. I majored in Network Engineering, but seldom had chances to do some practice, let alone interesting things about study. However, I got to know many friends there, and some may be life long. </p>
+              <p>I don't know why I came to AnHui University, but I spent four years there to complete courses during university. I majored in Network Engineering, but seldom had chances to do some interesting things about study. However, I got to know many friends there, and some may be life long. </p>
             </div>
           </div> 
         </div>        
@@ -226,28 +227,58 @@
       <div class="col-twelve">
            <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
               <div class="bgrid folio-item">
-                <i class="iconfont icon-collection_fill"></i>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-guojiajiangxuejin"></use>
+                </svg>
                 National Inspirational Scholarship * 2
               </div>
               <div class="bgrid folio-item">
-                <i class="iconfont icon-collection_fill"></i>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-guojiajiangxuejin"></use>
+                </svg>
                 Excellent Student Scholarship
               </div>
               <div class="bgrid folio-item">
-                <i class="iconfont icon-collection_fill"></i>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-guojiajiangxuejin"></use>
+                </svg>
                 Literary Sports Scholarship
               </div>
               <div class="bgrid folio-item">
-                <i class="iconfont icon-collection_fill"></i>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-lingdaoli"></use>
+                </svg>
                 Leader of Free Alliance Dance Crew in AnHui University
               </div>     
               <div class="bgrid folio-item">
-                <i class="iconfont icon-collection_fill"></i>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-lingdaoli"></use>
+                </svg>
+                Team Leader of SixSteps in South China University of Technology
+              </div> 
+              <div class="bgrid folio-item">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-jiangpai"></use>
+                </svg>
                 Champion of Cultural Festival Dance Competition in AnHui University
               </div>
               <div class="bgrid folio-item">
-                <i class="iconfont icon-collection_fill"></i>
-                Team Leader of SixSteps in South China University of Technology
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-kaifa"></use>
+                </svg>
+                Web Developer of Invigilation Net
+              </div> 
+              <div class="bgrid folio-item">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-kaifa"></use>
+                </svg>
+                Web Developer of Social Exam Net
+              </div> 
+              <div class="bgrid folio-item">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-kaifa"></use>
+                </svg>
+                Web Developer of www.huidaoedu.com
               </div> 
            </div>
       </div>
