--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- css -->
-  <link rel="stylesheet" href="css/base.css">  
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/vendor.css">  
-  <link rel="stylesheet" href="css/icon.css" />
+  <link rel="stylesheet" href="./shaodongWebCss/css/base.css">  
+  <link rel="stylesheet" href="./shaodongWebCss/css/main.css">
+  <link rel="stylesheet" href="./shaodongWebCss/css/vendor.css">  
+  <link rel="stylesheet" href="./shaodongWebCss/css/icon.css" />
   <!-- js -->
-  <script src="js/modernizr.js"></script>
-  <script src="js/pace.min.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/iconfont.js"></script>
+  <script src="./shaodongWebCss/js/modernizr.js"></script>
+  <script src="./shaodongWebCss/js/pace.min.js"></script>
+  <script src="./shaodongWebCss/js/index.js"></script>
+  <script src="./shaodongWebCss/js/iconfont.js"></script>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
@@ -309,8 +309,8 @@
       <div id="loader"></div>
    </div> 
 
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/plugins.js"></script>
-   <script src="js/main.js"></script>
+   <script src="./shaodongWebCss/js/jquery-2.1.3.min.js"></script>
+   <script src="./shaodongWebCss/js/plugins.js"></script>
+   <script src="./shaodongWebCss/js/main.js"></script>
 </body>
 </html>
