--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- css -->
-  <link rel="stylesheet" href="./shaodongWebCss/css/base.css">  
-  <link rel="stylesheet" href="./shaodongWebCss/css/main.css">
-  <link rel="stylesheet" href="./shaodongWebCss/css/vendor.css">  
-  <link rel="stylesheet" href="./shaodongWebCss/css/icon.css" />
+  <link rel="stylesheet" href="./myWeb/css/base.css">  
+  <link rel="stylesheet" href="./myWeb/css/main.css">
+  <link rel="stylesheet" href="./myWeb/css/vendor.css">  
+  <link rel="stylesheet" href="./myWeb/css/icon.css" />
   <!-- js -->
-  <script src="./shaodongWebCss/js/modernizr.js"></script>
-  <script src="./shaodongWebCss/js/pace.min.js"></script>
-  <script src="./shaodongWebCss/js/index.js"></script>
-  <script src="./shaodongWebCss/js/iconfont.js"></script>
+  <script src="./myWeb/js/modernizr.js"></script>
+  <script src="./myWeb/js/pace.min.js"></script>
+  <script src="./myWeb/js/iconfont.js"></script>
   <!-- favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="./myWeb/favicon.png">
 </head>
 
 <body id="top">
@@ -42,7 +41,7 @@
       <div class="col-twelve">
         <h1>About Me</h1>
         <div class="intro-info">
-          <img src="images/xsd.jpg" alt="It's shaodong's photo">
+          <img src="./myWeb/images/xsd.jpg" alt="It's shaodong's photo">
           <p class="lead">There should be something, but I do not know write what now. Maybe I will fill it when I have some good ideas one day.</p>
         </div>        
       </div>      
@@ -309,8 +308,8 @@
       <div id="loader"></div>
    </div> 
 
-   <script src="./shaodongWebCss/js/jquery-2.1.3.min.js"></script>
-   <script src="./shaodongWebCss/js/plugins.js"></script>
-   <script src="./shaodongWebCss/js/main.js"></script>
+   <script src="./myWeb/js/jquery-2.1.3.min.js"></script>
+   <script src="./myWeb/js/plugins.js"></script>
+   <script src="./myWeb/js/main.js"></script>
 </body>
 </html>
