--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="intro-content">
       <div class="row">
         <div class="col-twelve">
-          <h1>Hello, it's shaodong.</h1>
+          <h1>Hello, it's ShaoDong.</h1>
         </div>  
       </div>          
     </div>
@@ -42,7 +42,7 @@
         <h1>About Me</h1>
         <div class="intro-info">
           <img src="./myWeb/images/xsd.jpg" alt="It's shaodong's photo">
-          <p class="lead">There should be something, but I do not know write what now. Maybe I will fill it when I have some good ideas one day.</p>
+          <p class="lead">People are always worrying too much about the things they are going to do, so my motto is "Done in two steps", which means think about it and do it.</p>
         </div>        
       </div>      
     </div> 
@@ -277,7 +277,7 @@
                 <svg class="icon" aria-hidden="true">
                   <use xlink:href="#icon-kaifa"></use>
                 </svg>
-                Web Developer of www.huidaoedu.com
+                Web Developer of www.huikaoedu.com
               </div> 
            </div>
       </div>
