--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1>About Me</h1>
         <div class="intro-info">
           <img src="./myWeb/images/xsd.jpg" alt="It's shaodong's photo">
-          <p class="lead">People are always worrying too much about the things they are going to do, so my motto is "Done in two steps", which means think about it and do it.</p>
+          <p class="lead">People are always worrying too much but doing little about the things they are going to do, that is the reason why they fail. So my motto is "Done in two steps", which means think about it and do it.</p>
         </div>        
       </div>      
     </div> 
