--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- css -->
-  <link rel="stylesheet" href="./myWeb/css/base.css">  
-  <link rel="stylesheet" href="./myWeb/css/main.css">
-  <link rel="stylesheet" href="./myWeb/css/vendor.css">  
-  <link rel="stylesheet" href="./myWeb/css/icon.css" />
+  <link rel="stylesheet" href="css/base.css">  
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/vendor.css">  
+  <link rel="stylesheet" href="css/icon.css" />
   <!-- js -->
-  <script src="./myWeb/js/modernizr.js"></script>
-  <script src="./myWeb/js/pace.min.js"></script>
-  <script src="./myWeb/js/iconfont.js"></script>
+  <script src="js/modernizr.js"></script>
+  <script src="js/pace.min.js"></script>
+  <script src="js/iconfont.js"></script>
   <!-- favicon -->
-  <link rel="icon" type="image/png" href="./myWeb/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body id="top">
@@ -41,7 +41,7 @@
       <div class="col-twelve">
         <h1>About Me</h1>
         <div class="intro-info">
-          <img src="./myWeb/images/xsd.jpg" alt="It's shaodong's photo">
+          <img src="images/xsd.jpg" alt="It's shaodong's photo">
           <p class="lead">People are always worrying too much but doing little about the things they are going to do, that is the reason why they fail. So my motto is "Done in two steps", which means think about it and do it.</p>
         </div>        
       </div>      
@@ -308,8 +308,8 @@
       <div id="loader"></div>
    </div> 
 
-   <script src="./myWeb/js/jquery-2.1.3.min.js"></script>
-   <script src="./myWeb/js/plugins.js"></script>
-   <script src="./myWeb/js/main.js"></script>
+   <script src="js/jquery-2.1.3.min.js"></script>
+   <script src="js/plugins.js"></script>
+   <script src="js/main.js"></script>
 </body>
 </html>
