--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       <div class="row">
         <div class="col-six tab-full pull-right social">
           <ul class="footer-social">        
-            <li><a href="#" title="wechat: cqq_life"><i class="fa fa-weixin"></i></a></li>
+            <li><a href="map.html" title="wechat: cqq_life"><i class="fa fa-weixin"></i></a></li>
             <li><a href="https://weibo.com/u/3262570492"><i class="fa fa-weibo"></i></a></li>
             <li><a href="#" title="qq: 553828127"><i class="fa fa-qq"></i></a></li>
             <li><a href="https://github.com/TerminatorSd"><i class="fa fa-github-square "></i></a></li>
